--- a/hyprland/.config/hypr/autostart.conf
+++ b/hyprland/.config/hypr/autostart.conf
@@ -1,6 +1,6 @@
 exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 
-# 3. Kill and restart portals to ensure they pick up the Nvidia env vars
+# Kill and restart portals to ensure they pick up the Nvidia env vars
 exec-once = systemctl --user stop xdg-desktop-portal
 exec-once = systemctl --user stop xdg-desktop-portal-hyprland
 exec-once = systemctl --user start xdg-desktop-portal-hyprland
@@ -8,6 +8,7 @@ exec-once = systemctl --user start xdg-desktop-portal
 
 # exec-once = $terminal
 exec-once = uwsm-app -- hypridle
+exec-once = uwsm-app -- mako
 exec-once = uwsm-app -- hyprpaper
 exec-once = uwsm-app -- nm-applet
 exec-once = uwsm-app -- waybar
