--- a/hyprland/.config/hypr/bindings/utils.conf
+++ b/hyprland/.config/hypr/bindings/utils.conf
@@ -22,6 +22,7 @@ bindd = SUPER ALT, R, Random wallpaper from the wallpapers directory, exec, $wal
 bindd = SUPER, COMMA, Dismiss last notification, exec, makoctl dismiss
 bindd = SUPER SHIFT, COMMA, Dismiss all notifications, exec, makoctl dismiss --all
 bindd = SUPER CTRL, COMMA, Toggle silencing notifications, exec, makoctl mode -t do-not-disturb && makoctl mode | grep -q 'do-not-disturb' && notify-send "Silenced notifications" || notify-send "Enabled notifications"
+bindd = SUPER SHIFT CTRL, D, Toggle DnD mode, exec, toggle-mako-dnd
 
 # Dogear Bookmarks
 bind = SUPER SHIFT, B, exec, dogear list | wofi --dmenu --prompt "Bookmarks" | dogear open
