--- a/hyprland/.config/hypr/autostart.conf
+++ b/hyprland/.config/hypr/autostart.conf
@@ -1,4 +1,5 @@
 exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
+exec-once = nwg-look -a
 
 # Kill and restart portals to ensure they pick up the Nvidia env vars
 exec-once = systemctl --user stop xdg-desktop-portal
