--- a/hyprland/.config/hypr/autostart.conf
+++ b/hyprland/.config/hypr/autostart.conf
@@ -9,6 +9,7 @@ exec-once = systemctl --user start xdg-desktop-portal
 
 # exec-once = $terminal
 exec-once = uwsm-app -- hypridle
+exec-once = uwsm-app -- hyprsunset
 exec-once = uwsm-app -- mako
 exec-once = uwsm-app -- awww-daemon
 exec-once = uwsm-app -- awww restore
