--- a/gtk/.config/gtk-3.0/settings.ini
+++ b/gtk/.config/gtk-3.0/settings.ini
@@ -1,8 +1,8 @@
 [Settings]
 gtk-theme-name=Gruvbox-Red-Light
-gtk-icon-theme-name=breeze-dark
-gtk-font-name=Noto Sans  10
-gtk-cursor-theme-name=Bibata-Modern-Amber
+gtk-icon-theme-name=Gruvbox-Plus-Dark
+gtk-font-name=EnvyCodeR Nerd Font 12
+gtk-cursor-theme-name=default
 gtk-cursor-theme-size=24
 gtk-toolbar-style=3
 gtk-toolbar-icon-size=GTK_ICON_SIZE_LARGE_TOOLBAR
