--- a/gtk/.config/gtk-4.0/settings.ini
+++ b/gtk/.config/gtk-4.0/settings.ini
@@ -1,7 +1,7 @@
 [Settings]
 gtk-theme-name=Gruvbox-Red-Light
-gtk-icon-theme-name=breeze-dark
-gtk-font-name=Noto Sans  10
-gtk-cursor-theme-name=Bibata-Modern-Amber
+gtk-icon-theme-name=Gruvbox-Plus-Dark
+gtk-font-name=EnvyCodeR Nerd Font 12
+gtk-cursor-theme-name=default
 gtk-cursor-theme-size=24
 gtk-application-prefer-dark-theme=0
