--- a/hyprland/.config/hypr/apps/system.conf
+++ b/hyprland/.config/hypr/apps/system.conf
@@ -1,16 +1,23 @@
-# Floating windows
+# -----------------------------------------------------
+# Define the Tag Rules
+# -----------------------------------------------------
+# Use '+tagname' to ADD a tag. Do not use 'on'.
+windowrule = tag +floating-window, match:class (blueberry\.py|Impala|Wiremix|org\.gnome\.NautilusPreviewer|com\.gabm\.satty|Floating|About|TUI\.float)
+
+# Match both class AND title (AND logic is automatic in this syntax)
+windowrule = tag +floating-window, match:class (xdg-desktop-portal-gtk|sublime_text|DesktopEditors|org\.gnome\.Nautilus), match:title ^(Open.*Files?|Open [F|f]older.*|Save.*Files?|Save.*As|Save|All Files|.*wants to [open|save].*|[C|c]hoose.*)
+
+# -----------------------------------------------------
+# Apply Actions to the Tag
+# -----------------------------------------------------
 windowrule = float on, match:tag floating-window
 windowrule = center on, match:tag floating-window
-windowrule = size 1000 700 on, match:tag floating-window
+# 'size' does not take 'on'. Just width and height.
+windowrule = size 1000 700, match:tag floating-window
 
-windowrule = tag floating-window on, match:class (blueberry.py|Impala|Wiremix|org.gnome.NautilusPreviewer|com.gabm.satty|Floating|About|TUI.float)
-
-windowrule = tag floating-window on, match:class (xdg-desktop-portal-gtk|sublime_text|DesktopEditors|org.gnome.Nautilus), match:title ^(Open.*Files?|Open [F|f]older.*|Save.*Files?|Save.*As|Save|All Files|.*wants to [open|save].*|[C|c]hoose.*)
-
+# -----------------------------------------------------
+#  Other Rules
+# -----------------------------------------------------
 windowrule = float on, match:class org.gnome.Calculator
-
-# Fullscreen
 windowrule = fullscreen on, match:class Screensaver
-
-# No transparency on media windows
-windowrule = opacity 1 1 on, match:class ^(zoom|vlc|mpv|org.kde.kdenlive|com.obsproject.Studio|com.github.PintaProject.Pinta|imv|org.gnome.NautilusPreviewer)$
+windowrule = opacity 1.0 1.0, match:class ^(zoom|vlc|mpv|org\.kde\.kdenlive|com\.obsproject\.Studio|com\.github\.PintaProject\.Pinta|imv|org\.gnome\.NautilusPreviewer)$
