--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -22,7 +22,7 @@ bind-key l select-pane -R
 
 set-option -g status-position top
 
-set -g @tmux-gruvbox "light"
+set -g @tmux_gruvbox "light"
 
 bind -T copy-mode-vi v send -X begin-selection
 bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel
