--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -6,22 +6,27 @@ set -g default-terminal 'tmux-256color'
 set -g prefix C-s
 setw -g mode-keys vi
 
-# Sessionizer by ThePrimeagen
 bind-key -r f run-shell "tmux neww ~/.local/bin/tmux-sessionizer"
-bind-key -r M-h run-shell "tmux neww tmux-sessionizer -s 0"
-bind-key -r M-j run-shell "tmux neww tmux-sessionizer -s 1"
-bind-key -r M-k run-shell "tmux neww tmux-sessionizer -s 2"
-bind-key -r M-l run-shell "tmux neww tmux-sessionizer -s 3"
 
 set -g @tmux-gruvbox "light"
 
 run ~/.config/tmux/plugins/catppuccin/tmux/catppuccin.tmux
 run ~/.config/tmux/plugins/tmux-gruvbox/gruvbox-tpm.tmux
 
-bind-key h select-pane -L
-bind-key j select-pane -D
-bind-key k select-pane -U
-bind-key l select-pane -R
+# Smart pane switching with awareness of Vim splits.
+# See: https://github.com/christoomey/vim-tmux-navigator
+vim_pattern='(\S+/)?g?\.?(view|l?n?vim?x?|fzf)(diff)?(-wrapped)?'
+is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
+    | grep -iqE '^[^TXZ ]+ +${vim_pattern}$'"
+bind-key -n 'M-h' if-shell "$is_vim" 'send-keys M-h'  'select-pane -L'
+bind-key -n 'M-j' if-shell "$is_vim" 'send-keys M-j'  'select-pane -D'
+bind-key -n 'M-k' if-shell "$is_vim" 'send-keys M-k'  'select-pane -U'
+bind-key -n 'M-l' if-shell "$is_vim" 'send-keys M-l'  'select-pane -R'
+
+bind-key -T copy-mode-vi 'M-h' select-pane -L
+bind-key -T copy-mode-vi 'M-j' select-pane -D
+bind-key -T copy-mode-vi 'M-k' select-pane -U
+bind-key -T copy-mode-vi 'M-l' select-pane -R
 
 # Copy-mode with vim bindings
 bind -T copy-mode-vi v send -X begin-selection
